# unic

./: .codedocs  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  appveyor.yml
cmake/: PlatformDetect.cmake  VisibilityDetect.cmake
include/: plib.h  unic.h
include/p/: arch.h  atomic.h  bench.h  cc.h  condvar.h  condvariable.h  dir.h  dl.h  err.h  error.h  file.h  hash.h  htable.h  inifile.h  libloader.h  list.h  macros.h  main.h  mem.h  mutex.h  os.h  patomic.h  pcondvariable.h  pcryptohash.h  pdir.h  perror.h  perrortypes.h  pfile.h  phashtable.h  pinifile.h  plibraryloader.h  plibsys.h  plist.h  pmacros.h  pmain.h  pmem.h  pmutex.h  pprocess.h  process.h  profiler.h  (+25 more)
include/unic/: arch.h  atomic.h  cc.h  condvar.h  config.h.in  dir.h  dl.h  err.h  file.h  hash.h  htable.h  inifile.h  list.h  macros.h  main.h  mem.h  mutex.h  os.h  process.h  profiler.h  rwlock.h  sema.h  shm.h  shmbuf.h  socket.h  socketaddr.h  spinlock.h  string.h  thread.h  tree.h  types.h  uthread.h
src/: CMakeLists.txt  atomic-c11.c  atomic-decc.c  atomic-sim.c  atomic-sync.c  atomic-win.c  atomic.c  bench.c  condvar-atheos.c  condvar-beos.c  condvar-none.c  condvar-os2.c  condvar-posix.c  condvar-solaris.c  condvar-win.c  dir-none.c  dir-os2.c  dir-posix.c  dir-win.c  dir.c  dl-beos.c  dl-none.c  dl-os2.c  dl-posix.c  dl-shl.c  dl-win.c  err-private.h  err.c  error.c  file.c  hash-gost3411.c  hash-gost3411.h  hash-md5.c  hash-md5.h  hash-sha1.c  hash-sha1.h  hash-sha2-256.c  hash-sha2-256.h  hash-sha2-512.c  hash-sha2-512.h  (+224 more)
test/: atomic.c  condvar.c  cute.h  dir.c  dl.c  error.c  file.c  hash.c  htable.c  inifile.c  list.c  macros.c  main.c  mem.c  mutex.c  process.c  profiler.c  rwlock.c  sema.c  shm.c  shmbuf.c  socket.c  socketaddr.c  spinlock.c  string.c  thread.c  tree.c  types.c  uthread.c
tests/: CMakeLists.txt  patomic_test.cpp  pcondvariable_test.cpp  pcryptohash_test.cpp  pdir_test.cpp  perror_test.cpp  pfile_test.cpp  phashtable_test.cpp  pinifile_test.cpp  plibraryloader_test.cpp  plist_test.cpp  pmacros_test.cpp  pmain_test.cpp  pmem_test.cpp  pmutex_test.cpp  pprocess_test.cpp  prwlock_test.cpp  psemaphore_test.cpp  pshm_test.cpp  pshmbuffer_test.cpp  psocket_test.cpp  psocketaddress_test.cpp  pspinlock_test.cpp  pstring_test.cpp  ptimeprofiler_test.cpp  ptree_test.cpp  ptypes_test.cpp  puthread_test.cpp
